--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -17,9 +17,6 @@ checks:
         fix_identation_4spaces: true
         fix_doc_comments: true
 tools:
-    external_code_coverage:
-        timeout: 1200
-        runs: 3
     php_analyzer: true
     php_code_coverage: true
     php_code_sniffer:
@@ -33,3 +30,12 @@ tools:
     php_cpd:
         enabled: true
         excluded_dirs: [vendor, tests]
+
+build:
+    tests:
+        override:
+            -
+                command: 'vendor/bin/phpunit --coverage-clover=some-file'
+                coverage:
+                    file: 'some-file'
+                    format: 'clover'
