--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,4 @@ before_script:
 
 script:
   - ./vendor/bin/phpcs --standard=psr2 src/
-  - ./vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover --configuration=phpunit.xml
-
-after_script:
-  - wget https://scrutinizer-ci.com/ocular.phar
-  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+  - ./vendor/bin/phpunit --configuration=phpunit.xml
