--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,22 @@
 language: php
 
 php:
-  - 7.0
   - 7.1
+  - 7.2
+  - nightly
 
 before_script:
   - travis_retry composer self-update
-  - travis_retry composer install --no-interaction --prefer-source --dev
+  - travis_retry composer install --no-interaction --prefer-dist
   - travis_retry phpenv rehash
 
 script:
   - ./vendor/bin/phpcs --standard=psr2 src/
   - ./vendor/bin/phpunit --configuration=phpunit.xml
+
+allow_failures:
+  - php: nightly
+
+cache:
+  directories:
+    - $HOME/.composer/cache
